--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -3898,14 +3898,19 @@ input[type="button"].btn-block {
 .card-img,
 .card-img-top,
 .card-img-bottom {
-  flex-shrink: 0;
-  width: 100%; }
+  height: 200px;
+  width: 100%;
+  }
 
 .card-img,
 .card-img-top {
   border-top-left-radius: calc(0.375rem - 0px);
   border-top-right-radius: calc(0.375rem - 0px); }
 
+
+.cover {
+  object-fit: cover;
+}
 .card-img,
 .card-img-bottom {
   border-bottom-right-radius: calc(0.375rem - 0px);
@@ -11084,8 +11089,7 @@ a.text-white:hover, a.text-white:focus {
   background-color: unset; }
 
 .card-body, .card-footer, .card-meta, .card-img, .card-img-top, .card-img-left, .card-img-right {
-  position: relative;
-  min-height: 200px; }
+  position: relative; }
 
 a.card, a.card-body, a.card-footer, a.card-meta {
   color: inherit; }
