--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
 Theme Name: WP-FreeMomHugs
-Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
+Theme URI: https://freemomhugs.org/
+Author: Preston Kemp
+Author URI: https://www.prestonkemp.com
 Description: Description
 Version: 1.0.0
 Tested up to: 5.4
