--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -57,7 +57,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "HKGroteskPro", serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1.0625rem;
   font-weight: 400;
   line-height: 1.6;
@@ -4974,7 +4974,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "HKGroteskPro", serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -5059,7 +5059,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 380px;
-  font-family: "HKGroteskPro", serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -13530,7 +13530,8 @@ body.compensate-for-scrollbar {
     color: #335EEA; }
 
 .ql-container {
-  font-family: "HKGroteskPro", serif; }
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
 .ql-toolbar {
   position: relative;
