--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -357,6 +357,11 @@ h6, .h6 {
   font-weight: 400;
   line-height: 1; }
 
+.display-6 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1; }
+
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -11914,8 +11919,14 @@ h6, .h6 {
 .display-5 {
   line-height: 1.2; }
 @media (max-width: 991.98px) {
-  .display-4 {
-    font-size: 2rem; } }
+  .display-5 {
+    font-size: 1rem; } }
+
+.display-6 {
+  line-height: 1.2; }
+@media (max-width: 991.98px) {
+  .display-6 {
+    font-size: 1rem; } }
 
 @media (max-width: 991.98px) {
   .lead {
